Fix small spacing issues on search

--- a/css/style.css
+++ b/css/style.css
@@ -28,14 +28,6 @@ ul.pagination {
     margin: 0 !important;
 }
 
-.sort-icon {
-    display: none;
-}
-
-.desc a::after {
-    content: "";
-}
-
 ul.pagination li, 
 .pagination li {
     border: none !important;
